--- a/index.html
+++ b/index.html
@@ -5,13 +5,25 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
+    <title>Minecraft</title>
   </head>
   <body>
     <main>
         <!-- a tag hyperlink: add your HTML codes here -->
-
-        <header></header>
+      <h1>You create a minecraft world</h1>
+      <p>You punch wood at the start of the game</p>
+      <p>Next you craft them into planks and use 4 planks to craft a crafting table</p>
+      <p>After that you craft sticks and craft a wooden pick with three planks and two sticks</p>
+      <p>Find a cave and mine stone and you will receive cobblestone</p>
+      <p>Craft some stone tools using that cobblestone and sticks</p>
+      <p>build a starter home using either dirt or wood</p>
+      <p>break some grass and you will receive wheat seeds</p>
+      <p>Til the ground using your hoe and plant the wheat seeds</p>
+      <p>Head back down into the cave</p>
+      <p>Mine some coal and craft some torches and save some of them</p>
+      <p>Find iron, mine it and receive raw ir
+    <header></header>
     </main>
-    <script src="placeholder.js"></script>
+    <script src="L01_redcircle.js"></script>
   </body>
 </html>
