--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p>Til the ground using your hoe and plant the wheat seeds</p>
       <p>Head back down into the cave</p>
       <p>Mine some coal and craft some torches and save some of them</p>
-      <p>Find iron, mine it and receive raw ir
+      <p>Find iron, mine it and receive raw iron<p></p>
     <header></header>
     </main>
     <script src="L01_redcircle.js"></script>
