--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <main>
         <!-- a tag hyperlink: add your HTML codes here -->
       <h1>Welcome to Basic HTMl<h1>
-      <a> href=https://www.google.com.sg/">Googlr</a>
+      <a href="https://www.google.com.sg/">Click Here to enter Google</a>
     <header></header>
     </main>
-    <script src="L01_redcircle.js"></script>
+    <script src="L04_mouseclick.js"></script>
   </body>
 </html>
