--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
       <a href="https://www.google.com.sg/">Click Here to enter Google</a>
     <header></header>
     </main>
-    <script src="L04_mouseclick.js"></script>
+    <script src="L05_.js"></script>
   </body>
 </html>
