--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
       <a href="https://www.google.com.sg/">Click Here to enter Google</a>
     <header></header>
     </main>
-    <script src="L09_text.js"></script>
+    <script src="L09_text_alarm.js"></script>
   </body>
 </html>
