--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <title>Minecraft</title>
   </head>
-  <body>
+  ><body
     <main>
         <!-- a tag hyperlink: add your HTML codes here -->
       <h1>Welcome to Basic HTMl<h1>
