--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <main>
         <!-- a tag hyperlink: add your HTML codes here -->
+      <a href="https://www.google.com.sg/">Click Here to enter Google</a>
     <header></header>
     </main>
     <script src="L10_name.js"></script>
