--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <meta charset="utf-8" />
     <title>Minecraft</title>
   </head>
-  <body>
+  <body></body>
     <main>
         <!-- a tag hyperlink: add your HTML codes here -->
+      <h1>Welcome to Basic HTMl<h1>
       <a href="https://www.google.com.sg/">Click Here to enter Google</a>
     <header></header>
     </main>
